# tribe

./: .gitignore  .travis.yml  README.md  Vagrantfile  default.xml  foo.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.bash  tox.ini
doc/source/: conf.py  index.rst  testing.rst
tests/: test_agent.py  test_client.py  test_config.py
tests/support/: test.json
tribe/: __init__.py  agent.py  client.py  config.py  shell.py  util.py
tribe/tests/: test.json  test_agent.py  test_client.py  test_config.py  test_util.py
tribe/tests/support/: test.json
vagrant/: site.yml
vagrant/roles/retr0h.etcd/meta/: .galaxy_install_info
vagrant/roles/tribe/defaults/: main.yml
vagrant/roles/tribe/handlers/: main.yml
vagrant/roles/tribe/tasks/: main.yml
vagrant/roles/tribe/templates/etc/: tribe.json.j2
vagrant/roles/tribe/templates/etc/init/: tribe-agent.conf.j2  tribe-cleanup.conf.j2  tribe-heartbeat.conf.j2  tribed.conf.j2
vagrant/tests/: failback.yml  failover.yml  initial.yml  main.yml
