[metadata]
name = tribe
summary = tribe - A tool for maintaining a consistent list of IP addresses across a set of available nodes.
description-file =
    README.md
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/tribe
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    tribe = tribe.shell:main

[files]
packages =
    tribe

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
